--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ cpi = ["no-entrypoint"]
 [dependencies]
 anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "dae4c216b883ea089432ff5c00d100f4f662fd07" }
 anchor-lang = "^0.29.0"
-solana-program = ">=1.13"
-jupiter-amm-interface = ">=0.2.1"
+solana-program = "^1.18.15"
+jupiter-amm-interface = { git = "https://github.com/hft-team/jupiter-amm-interface.git" }
 rand = "0.8.5"
